--- a/src/index.css
+++ b/src/index.css
@@ -66,8 +66,8 @@ html {
 
 body {
   background: var(--backgroundColor);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 400;
   line-height: 1;
   color: var(--textColor);
@@ -344,6 +344,14 @@ ul {
   transform: translateX(100%);
 }
 
+.prev-slide {
+  transform: translateX(-100%);
+}
+
+.curr-slide {
+  transform: translateX(0%);
+}
+
 /* ============= Slick Carousel =============== */
 
 .slick-container {
@@ -353,7 +361,7 @@ ul {
   max-width: 800px;
   text-align: center;
 }
-.slick-slide img {
+.slick-container .slick-slide img {
   display: inline-block;
 }
 
